@@ -28,14 +28,20 @@ public class ReaderService {
     }
 
     public List<ReaderDto> findAllReaders(){
-        return readerRepository.findAll().stream().map(reader -> readerConverter.toDto(reader)).collect(Collectors.toList());
+        return readerRepository
+                .findAll()
+                .stream()
+                .map(reader -> readerConverter
+                        .toDto(reader))
+                .collect(Collectors
+                        .toList());
     }
 
     public ReaderDto createReader (ReaderDto readerDto){
         checkNotNull(readerDto, "Expected non-empty readerDto");
         readerRepository.findByFirstNameAndLastName(readerDto.getFirstName(),readerDto.getLastName())
                 .ifPresent(reader -> {
-                    throw new DuplicateReaderException("Reader already exists in a database scope");
+                    throw new DuplicateReaderException("reader already exists in a database scope");
                 });
         return readerConverter.toDto(readerRepository.save(readerConverter.toEntity(readerDto)));
     }
